fixed readability closes #21

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,11 +19,16 @@
   display: flex;
   flex-direction: column;
 }
+
 .contact-hero h1, .contact-hero p {
   color: var(--light);
 }
 
-/* Section 6 Portfolio */
+.shadow-text{
+  text-shadow: 0 0 15px rgba(20, 20, 20, 0.705);
+}
+
+/* Portfolio Section */
 .gallery-section, .gallery-image{
   padding-top: 16px;
   padding-bottom: 16px;
